Доработка базовых критериев

--- a/source/index.html
+++ b/source/index.html
@@ -303,13 +303,13 @@
           </div>
           <div class="reason__image-wrapper reason__image-wrapper--reason-first">
             <picture>
-              <source type="image/webp" media="(min-width: 1200px)" srcset="../img/main-city-desktop@1x.webp 1x, ../img/main-city-desktop@2x.webp 2x">
-              <source type="image/webp" media="(min-width: 768px)" srcset="../img/main-city-tablet@1x.webp 1x, ../img/main-city-tablet@2x.webp 2x">
-              <source type="image/webp" srcset="../img/main-city-mobile@1x.webp 1x, ../img/main-city-mobile@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
+              <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
+              <source type="image/webp" srcset="img/main-city-mobile@1x.webp 1x, img/main-city-mobile@2x.webp 2x">
 
-              <source media="(min-width: 1200px)" srcset="../img/main-city-desktop@1x.jpg 1x, ../img/main-city-desktop@2x.jpg 2x">
-              <source media="(min-width: 768px)" srcset="../img/main-city-tablet@1x.jpg 1x, ../img/main-city-tablet@2x.jpg 2x">
-              <img class="reason__image reason__image--image-reason-first" src="../img/main-city-mobile@1x.jpg" srcset="../img/main-city-mobile@2x.jpg 2x" alt="Фото Седона">
+              <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+              <img class="reason__image reason__image--image-reason-first" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Фото Седона">
             </picture>
           </div>
         </section>
@@ -332,7 +332,7 @@
                     </svg>
               </div>
               <h3 class="features__title features__title--souvenir text text--weight-bold text--size--medium text--line-height--large">Сувениры</h3>
-              <p class="features__text features__text--souvenir text text--weight-normal text--size--small text--line-height--medium">Не только китайского, но и местного производства!</p>
+              <p class="features__text features__text--souvenir text text--weight-normal text--size--small text--line-height--medium">Не только китайского, <span class="features__text-shift">но и местного производства!</span></p>
             </li>
             <li class="features__item features__item--food">
               <div class="features__icon features__icon--burger-icon">
@@ -347,19 +347,19 @@
         </section>
         <section class="page-main-content__reason reason reason--reason-second">
           <div class="reason__content reason__content--background-blue">
-            <h3 class="reason__title text text--weight-bold text--size--medium text--line-height--large">Там есть Мост Дьявола</h3>
+            <h3 class="reason__title text text--weight-bold text--size--medium text--line-height--large">Там есть <span class="reason__title-shift">Мост Дьявола</span></h3>
             <div class="reason__num text text--weight-normal text--size--small text--line-height--light">№2</div>
             <p class="reason__text reason__text--reason-second text text--weight-normal text--size--small text--line-height--medium">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           </div>
           <div class="reason__image-wrapper reason__image-wrapper--reason-second">
               <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.webp 1x, ../img/photo-bridge-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.webp 1x, ../img/photo-bridge-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="../img/photo-bridge-mobile@1x.webp 1x, ../img/photo-bridge-mobile@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/main-bridge-mobile@1x.webp 1x, img/main-bridge-mobile@2x.webp 2x">
 
-                <source media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.jpg 1x, ../img/photo-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.jpg 1x, ../img/photo-bridge-tablet@2x.jpg 2x">
-                <img class="reason__image reason__image--image-reason-second" src="../img/photo-bridge-mobile@1x.jpg" srcset="../img/photo-bridge-mobile@2x.jpg 2x" alt="Фото Мост Дьявола">
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                <img class="reason__image reason__image--image-reason-second" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Фото Мост Дьявола">
               </picture>
             </div>
         </section>
@@ -392,21 +392,10 @@
       <section class="page-main__hotels-searching hotels-searching">
         <h3 class="hotels-searching__title text text--weight-bold text--size--large text--line-height--large">Заинтересовались?</h3>
         <p class="hotels-searching__text text text--weight-normal text--size--small text--line-height--big">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          Укажите предполагаемые даты поездки,<span class="hotels-searching__text-shift">и мы покажем вам лучшие предложения гостиниц в Седоне</span></p>
         <a class="hotels-searching__button button text text--weight-bold text--size--large text--line-height--large" href="hotels.html">Найти гостиницу</a>
         <div class="map">
-            <picture>
-                <source type="image/webp" media="(min-width: 1200px)" srcset="../img/bg-map-desktop@1x.webp 1x, ../img/bg-map-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.webp 1x, ../img/bg-map-tablet@2x.webp 2x">
-                <source type="image/webp" srcset="img/bg-map-mobile@1x.webp, ../img/bg-map-mobile@2x.webp 2x">
-
-                <source media="(min-width: 1200px)" srcset="../img/bg-map-desktop@1x.jpg 1x, ../img/bg-map-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../img/bg-map-tablet@1x.jpg 1x, ../img/bg-map-tablet@2x.jpg 2x">
-                <img class="map" src="../img/bg-map-mobile@1x.jpg" srcset="../img/bg-map-mobile@2x.jpg 2x" alt="Карта">
-              </picture>
-          <svg width="27px" height="27px">
-            <use xlink:href="#icon-map-marker"></use>
-          </svg>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2367920.8018486034!2d-113.34103675630351!3d34.98513901525323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1540994449506" width="320" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </section>
     </main>
@@ -447,6 +436,6 @@
       </p>
     </footer>
     </div>
-    <script src="picturefill.min.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
