--- a/source/form.html
+++ b/source/form.html
@@ -410,6 +410,6 @@
       </div>
     </section>
     </div>
-    <script src="picturefill.min.js"></script>
+    <script src="js/picturefill.min.js"></script>
   </body>
 </html>
