--- a/source/photo.html
+++ b/source/photo.html
@@ -259,15 +259,15 @@
         <h2 class="visually-hidden">Фотогалерея</h2>
         <figure class="gallery__photo photo photo--top-photo">
           <a class="photo__link">
-            <div class="photo__img-wrapper photo__img-wrapper--photo-sunset" tabindex="0">
+            <div class="photo__img-wrapper photo__img-wrapper--photo-sunset">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-sunset-desktop@1x.webp 1x, ../img/photo-sunset-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-sunset-tablet@1x.webp 1x, ../img/photo-sunset-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="../img/photo-sunset-mobile@1x.webp 1x, ../img/photo-sunset-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.webp 1x, img/photo-sunset-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.webp 1x, img/photo-sunset-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-sunset-mobile@1x.webp 1x, img/photo-sunset-mobile@2x.webp 2x">
 
-                  <source media="(min-width: 1200px)" srcset="../img/photo-sunset-desktop@1x.jpg 1x, ../img/photo-sunset-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="../img/photo-sunset-tablet@1x.jpg 1x, ../img/photo-sunset-tablet@2x.jpg 2x">
-                  <img class="photo__img photo__img--photo-sunset" src="../img/photo-sunset-mobile@1x.jpg" srcset="../img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
+                  <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                  <img class="photo__img photo__img--photo-sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Неродные просторы">
                 </picture>
             </div>
           </a>
@@ -284,15 +284,15 @@
         </figure>
         <figure class="gallery__photo photo">
           <a class="photo__link">
-            <div class="photo__img-wrapper" tabindex="0">
+            <div class="photo__img-wrapper">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-cactus-desktop@1x.webp 1x, ../img/photo-cactus-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-cactus-tablet@1x.webp 1x, ../img/photo-cactus-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="../img/photo-cactus-mobile@1x.webp 1x, ../img/photo-cactus-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.webp 1x, img/photo-cactus-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.webp 1x, img/photo-cactus-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-cactus-mobile@1x.webp 1x, img/photo-cactus-mobile@2x.webp 2x">
 
-                  <source media="(min-width: 1200px)" srcset="../img/photo-cactus-desktop@1x.jpg 1x, ../img/photo-cactus-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="../img/photo-cactus-tablet@1x.jpg 1x, ../img/photo-cactus-tablet@2x.jpg 2x">
-                  <img class="photo__img photo__img--photo-cactus" src="../img/photo-cactus-mobile@1x.jpg" srcset="../img/photo-cactus-mobile@2x.jpg 2x" alt="Местная растительность">
+                  <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                  <img class="photo__img photo__img--photo-cactus" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Местная растительность">
                 </picture>
             </div>
           </a>
@@ -309,15 +309,15 @@
         </figure>
         <figure class="gallery__photo photo">
           <a class="photo__link">
-            <div class="photo__img-wrapper" tabindex="0">
+            <div class="photo__img-wrapper">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-roads-desktop@1x.webp 1x, ../img/photo-roads-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-roads-tablet@1x.webp 1x, ../img/photo-roads-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="../img/photo-roads-mobile@1x.webp 1x, ../img/photo-roads-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.webp 1x, img/photo-roads-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.webp 1x, img/photo-roads-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-roads-mobile@1x.webp 1x, img/photo-roads-mobile@2x.webp 2x">
 
-                  <source media="(min-width: 1200px)" srcset="../img/photo-roads-desktop@1x.jpg 1x, ../img/photo-roads-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="../img/photo-roads-tablet@1x.jpg 1x, ../img/photo-roads-tablet@2x.jpg 2x">
-                  <img class="photo__img photo__img--photo-roads" src="../img/photo-roads-mobile@1x.jpg" srcset="../img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
+                  <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                  <img class="photo__img photo__img--photo-roads" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога на север">
                 </picture>
             </div>
           </a>
@@ -334,15 +334,15 @@
         </figure>
         <figure class="gallery__photo photo">
           <a class="photo__link">
-            <div class="photo__img-wrapper" tabindex="0">
+            <div class="photo__img-wrapper">
                 <picture>
-                  <source type="image/webp" media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.webp 1x, ../img/photo-bridge-desktop@2x.webp 2x">
-                  <source type="image/webp" media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.webp 1x, ../img/photo-bridge-tablet@2x.webp 2x">
-                  <source type="image/webp" srcset="../img/photo-bridge-mobile@1x.webp 1x, ../img/photo-bridge-mobile@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.webp 1x, img/photo-bridge-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.webp 1x, img/photo-bridge-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bridge-mobile@1x.webp 1x, img/photo-bridge-mobile@2x.webp 2x">
 
-                  <source media="(min-width: 1200px)" srcset="../img/photo-bridge-desktop@1x.jpg 1x, ../img/photo-bridge-desktop@2x.jpg 2x">
-                  <source media="(min-width: 768px)" srcset="../img/photo-bridge-tablet@1x.jpg 1x, ../img/photo-bridge-tablet@2x.jpg 2x">
-                  <img class="photo__img photo__img--photo-bridge" src="../img/photo-bridge-mobile@1x.jpg" srcset="../img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
+                  <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                  <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                  <img class="photo__img photo__img--photo-bridge" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
                 </picture>
             </div>
           </a>
@@ -365,13 +365,13 @@
           Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
         <div class="video-gallery__clip-wrapper">
           <picture>
-            <source type="image/webp" media="(min-width: 1200px)" srcset="../img/video-desktop@1x.webp 1x, ../img/video-desktop@2x.webp 2x">
-            <source type="image/webp" media="(min-width: 768px)" srcset="../img/video-tablet@1x.webp 1x, ../img/video-tablet@2x.webp 2x">
-            <source type="image/webp" srcset="../img/video-mobile@1x.webp 1x, ../img/video-mobile@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+            <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+            <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
 
-            <source media="(min-width: 1200px)" srcset="../img/video-desktop@1x.jpg 1x, ../img/video-desktop@2x.jpg 2x">
-            <source media="(min-width: 768px)" srcset="../img/video-tablet@1x.jpg 1x, ../img/video-tablet@2x.jpg 2x">
-            <img class="video-gallery__clip" src="../img/video-mobile@1x.jpg" srcset="../img/video-mobile@2x.jpg 2x">
+            <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+            <img class="video-gallery__clip" src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Не удалось загрузить видео">
           </picture>
         </div>
         <div class="player-controls">
@@ -432,6 +432,6 @@
       </p>
     </footer>
   </div>
-  <script src="picturefill.min.js"></script>
+  <script src="js/picturefill.min.js"></script>
   </body>
 </html>
