--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,10 @@
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="css/style.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preload" href="fonts/ptsans.woff" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff" as="font">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
 </head>
 <body class="page">
   <div class="page__wrapper">
@@ -395,7 +399,7 @@
           Укажите предполагаемые даты поездки,<span class="hotels-searching__text-shift">и мы покажем вам лучшие предложения гостиниц в Седоне</span></p>
         <a class="hotels-searching__button button text text--weight-bold text--size--large text--line-height--large" href="hotels.html">Найти гостиницу</a>
         <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2367920.8018486034!2d-113.34103675630351!3d34.98513901525323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1540994449506" width="320" height="375" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2367920.8018486034!2d-113.34103675630351!3d34.98513901525323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1540994449506" width="320" height="375" style="border:0" allowfullscreen></iframe>
         </div>
       </section>
     </main>
